syntax = "proto3";

package hero;

service HeroesService {
    rpc FindOne (HeroById) returns (Hero) {}
    rpc Find(Void) returns (stream Hero) {}
}

service HelloService {
  rpc BidiHello(stream HelloRequest) returns (stream HelloResponse){}
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse){}
}

message HeroById {
    int32 id = 1;
}

message Hero {
    int32 id = 1;
    string name = 2;
}

message Void {}

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
  string meta = 2;
}